# SwiftMarkdownTools

./: .gitignore
FastMarkdownParser/: Package.swift
FastMarkdownParser/Frameworks/: MarkdownParserFFI.xcframework
FastMarkdownParser/Sources/FastMarkdownParser/: FastMarkdownParser.swift  MarkdownFormat.swift  MarkdownFormatDebug.swift
FastMarkdownParser/Tests/FastMarkdownParserTests/: FastMarkdownParserTests.swift
MarkdownExampleApp/MarkdownExampleApp/: ContentView.swift  DocumentView.swift  MarkdownDebugEditor.swift  MarkdownExampleApp.swift  MarkdownExampleAppApp.swift  MarkdownRenderer.swift  WrapView.swift
MarkdownExampleApp/MarkdownExampleApp.xcodeproj/: project.pbxproj
MarkdownExampleApp/MarkdownExampleApp/samples/: SampleFileType.swift  sample1.md  sample2.md  sample3.md  sample4.md
MarkdownExampleApp/MarkdownExampleAppTests/: MarkdownExampleAppTests.swift
MarkdownExampleApp/MarkdownExampleAppUITests/: MarkdownExampleAppUITests.swift  MarkdownExampleAppUITestsLaunchTests.swift
SwiftMarkdownTools.xcworkspace/: contents.xcworkspacedata
SwiftMarkdownTools.xcworkspace/xcshareddata/swiftpm/: Package.resolved
crates/: .gitignore  Cargo.toml  build-clibs.sh
crates/assets/MarkdownParserFFI/: module.modulemap
crates/dev/: Cargo.toml
crates/dev/src/: main.rs
crates/markdown-format/: Cargo.toml
crates/markdown-format/src/: common.rs  data.rs  debug.rs  lib.rs  parser.rs
crates/markdown-parser-ffi/: Cargo.toml  cbindgen.toml
crates/markdown-parser-ffi/src/: lib.rs
crates/samples/: battery-1.md  general-1.md
(+1 files in other folders)
