[package]
name = "markdown-parser-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["preserve_order"]}
serde_json = { version = "1.0" }
libc = "0.2"
plist = "1.6.1"

[dependencies.markdown-format]
path = "../markdown-format"
